--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/login.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/login.html
@@ -9,24 +9,27 @@
             {{loginError}}
         </div>
 
-        <div class="form-group">
-            <label for="login-identifier">Username</label>
+        <form ng-submit="performLogin()">
+            <div class="form-group">
+                <label for="login-identifier">Username</label>
 
-            <div class="input-group">
-                <div class="input-group-addon">@</div>
-                <input type="text" class="form-control" id="login-identifier" ng-model="login.username"/>
+                <div class="input-group">
+                    <div class="input-group-addon">@</div>
+                    <input type="text" class="form-control" id="login-identifier" ng-model="login.username"/>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="login-password">Password</label>
-            <input type="password" class="form-control" ng-model="login.password" id="login-password"/>
-        </div>
+            <div class="form-group">
+                <label for="login-password">Password</label>
+                <input type="password" class="form-control" ng-model="login.password" id="login-password"/>
+            </div>
 
-        <button class="btn btn-primary" ng-click="performLogin()">Login</button>
-        <button class="btn btn-default" ng-click="cancelLogin()">Cancel</button>
+            <button class="btn btn-primary" ng-click="performLogin()">Login</button>
+            <button class="btn btn-default" ng-click="cancelLogin()">Cancel</button>
+        </form>
     </div>
     <div class="container col-lg-6">
         <h2>You're 2 seconds from the dream!</h2>
+
         <div class="alert alert-danger alert-dismissible" role="alert" ng-show="registerError != null">
             <button type="button" class="close" aria-label="Close" ng-click="registerError = null">
                 <span aria-hidden="true">&times;</span>
