--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/navBar.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/navBar.html
@@ -26,9 +26,9 @@
                         </li>
                     </ul>
                     <div class="col-sm-6 col-md-6">
-                        <form class="navbar-form">
+                        <form class="navbar-form" ng-submit="postTweet()">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Post a tweet">
+                                <input ng-model="$parent.tweetText" type="text" class="form-control" placeholder="Post a tweet">
                                 <div class="input-group-btn">
                                     <button class="btn btn-primary" type="submit">Tweet</button>
                                 </div>
