Add link to Profile button on navbar

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/navBar.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/navBar.html
@@ -36,7 +36,7 @@
                         </form>
                     </div>
                     <div class="nav navbar-nav navbar-right">
-                        <button type="button" class="btn btn-primary navbar-btn navbar-btn-highlighted">Profile</button>
+                        <a href="#/profile/{{currentUser.id}}"><button type="button" class="btn btn-primary navbar-btn navbar-btn-highlighted">Profile</button></a>
                         <button type="button" class="btn btn-default navbar-btn navbar-btn-discret" ng-click="performLogout()">Logout</button>
                     </div>
                 </div>
