--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
@@ -16,27 +16,27 @@
     </div>
 </div>
 
-<div class="row voffset20">
+<div class="row voffset20" ng-repeat="t in tweets">
     <div class="container col-lg-6 col-lg-offset-3 tweet-container">
         <div class="col-lg-8 voffset10">
             <p class="tweet-author-display">
-                <a href="#" alt="See full profile">Hervé Heurtault de Lammerville</a>
+                <a ng-href="#/profile/{{tweet.author.id}}" alt="See full profile">{{t.author.cleanName}}</a>
                 <br />
-                <span>@hhlammerville</span>
+                <span>@{{t.author.login}}</span>
             </p>
         </div>
         <div class="col-lg-4 voffset5 text-right">
-            <p class="tweet-datetime">2 hours ago</p>
+            <p class="tweet-datetime">{{t.date | date:'medium'}}</p>
         </div>
         <div class="col-lg-12 voffset5">
-            <p class="tweet-content">This is a tweet on several lines. In case you missed it, you may handle a several line behavior using Bootstrap. Thing about responsive.</p>
+            <p class="tweet-content">{{t.text}}</p>
         </div>
         <div class="col-lg-4 vbottomoffset10">
-            <button type="button" class="btn btn-default btn-xs twitter-btn-action-retweet disabled">
-                <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> 17
+            <button type="button" class="btn btn-default btn-xs twitter-btn-action-retweet" ng-disabled="t.author.id == currentUser.id">
+                <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> {{t.nbRetweet}}
             </button>
             <button type="button" class="btn btn-default btn-xs twitter-btn-action-reply">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 12
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             </button>
         </div>
     </div>
