--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
@@ -13,7 +13,7 @@
             <a href="#" editable-text="user.description" ng-if="isProfileEditable == true && user.description.length == 0">No description available</a>
             <div ng-if="isProfileEditable == false">{{user.description}}</div>
         </h5>
-        <p><strong class="primary-color">18</strong> followers | <strong class="primary-color">17</strong> following</p>
+        <p><strong class="primary-color">{{user.nbFollowers}}</strong> followers | <strong class="primary-color">{{user.nbFollows}}</strong> following</p>
     </div>
 </div>
 
