Fix mistake on user id on profile link on profile tweet feed

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
@@ -21,7 +21,7 @@
     <div class="container col-lg-6 col-lg-offset-3 tweet-container">
         <div class="col-lg-8 voffset10">
             <p class="tweet-author-display">
-                <a ng-href="#/profile/{{tweet.author.id}}" alt="See full profile">{{t.author.cleanName}}</a>
+                <a ng-href="#/profile/{{t.author.id}}" alt="See full profile">{{t.author.cleanName}}</a>
                 <br />
                 <span>@{{t.author.login}}</span>
             </p>
