--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/stream-loggedin.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/stream-loggedin.html
@@ -1,5 +1,5 @@
-<div class="row" ng-repeat="t in tweets">
-    <div class="container col-lg-6 col-lg-offset-3 tweet-container">
+<div class="row">
+    <div class="container col-lg-6 col-lg-offset-3 tweet-container" ng-repeat="t in tweets">
         <div class="col-lg-8 voffset10">
             <p class="tweet-author-display"><a ng-href="#/profile/{{t.author.id}}" alt="See full profile">{{t.author.cleanName}}</a><br /><span>@{{t.author.login}}</span></p>
         </div>
