--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
@@ -1,6 +1,10 @@
 <div class="row">
     <div class="col-lg-2 col-lg-offset-3 text-left">
         <img src="http://www.placehold.it/150x150">
+        <form ng-submit="updateProfilePicture()">
+            <input type="file" id="candidateProfilePicture" ng-model="candidateProfilePicture">
+            <input type="submit" class="btn btn-default" value="Update">
+        </form>
     </div>
     <div class="col-lg-4">
         <h1>
