--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
@@ -34,10 +34,10 @@
         </div>
         <div class="col-lg-4 vbottomoffset10">
             <button type="button" class="btn btn-default btn-xs twitter-btn-action-retweet" ng-disabled="t.author.id == currentUser.id">
-                <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> {{t.nbRetweet}}
+                <span class="glyphicon glyphicon-retweet" aria-hidden="true"></span> {{t.nbRetweet}}
             </button>
             <button type="button" class="btn btn-default btn-xs twitter-btn-action-reply">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>
             </button>
         </div>
     </div>
