display tweet length counter only when typing a tweet

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/navBar.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/navBar.html
@@ -33,7 +33,7 @@
                                     <button class="btn btn-primary" type="submit">Tweet</button>
                                 </div>
                             </div>
-                            <div class="checkbox text-muted">
+                            <div class="checkbox text-muted" ng-show="$parent.tweetText.length > 0">
                                 {{$parent.tweetText.length}}/140
                             </div>
                         </form>
