color and disable RT button on a tweet if user who reads it already RTed it

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/assets/stylesheets/stylesheets-default.css
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/assets/stylesheets/stylesheets-default.css
@@ -74,7 +74,7 @@ p.tweet-content {
 }
 
 .twitter-btn-action-retweeted span {
-    color: #1ABC9B;
+    color: #1ABC9B !important;
 }
 
 .twitter-btn-action-retweet span {
