--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/stream-loggedin.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/stream-loggedin.html
@@ -10,7 +10,9 @@
             <p class="tweet-content">{{t.text}}</p>
         </div>
         <div class="col-lg-4 vbottomoffset10">
-            <button type="button" class="btn btn-default btn-xs twitter-btn-action-retweet" ng-disabled="t.author.id == currentUser.id">
+            <button type="button" class="btn btn-default btn-xs twitter-btn-action-retweet"
+                    ng-class="{'twitter-btn-action-retweeted':t.hasBeenRt}"
+                    ng-disabled="t.author.id == currentUser.id || t.hasBeenRt">
                 <span class="glyphicon glyphicon-retweet" aria-hidden="true"></span> {{t.nbRetweet}}
             </button>
             <button type="button" class="btn btn-default btn-xs twitter-btn-action-reply">
