--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/modal/modal-reply.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/modal/modal-reply.html
@@ -10,5 +10,5 @@
 
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">Tweet</button>
-    <button class="btn" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-default" ng-click="cancel()">Cancel</button>
 </div>
