--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/modal/modal-reply.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/modal/modal-reply.html
@@ -3,7 +3,7 @@
 <div class="modal-body">
     <div class="form-group">
         <label for="tweet-reply-content" class="modal-form-input-header">In reply to <span><i>"{{originalTweet.text}}"</i></span></label>
-        <input type="text" class="form-control" id="tweet-reply-content" ng-model="reply.text" placeholder="Reply here" maxlength="140">
+        <input type="text" class="form-control" id="tweet-reply-content" ng-model="reply.text" placeholder="Reply here" maxlength="140" autofocus="">
         <p class="counter">{{140 - reply.text.length}} car.</p>
     </div>
 </div>
