--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/user-profile.html
@@ -14,6 +14,7 @@
             <div ng-if="isProfileEditable == false">{{user.description}}</div>
         </h5>
         <p><strong class="primary-color">{{user.nbFollowers}}</strong> followers | <strong class="primary-color">{{user.nbFollows}}</strong> following</p>
+        <button class="btn btn-primary" ng-if="isProfileEditable == false">S'abonner</button>
     </div>
 </div>
 
