Move code for tweet feed in a directive

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/stream-loggedin.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/stream-loggedin.html
@@ -1,23 +1,1 @@
-<div class="row">
-    <div class="container col-lg-6 col-lg-offset-3 tweet-container" ng-repeat="t in tweets">
-        <div class="col-lg-8 voffset10">
-            <p class="tweet-author-display"><a ng-href="#/profile/{{t.author.id}}" alt="See full profile">{{t.author.cleanName}}</a><br /><span>@{{t.author.login}}</span></p>
-        </div>
-        <div class="col-lg-4 voffset5 text-right">
-            <p class="tweet-datetime">{{t.date | date:'medium'}}</p>
-        </div>
-        <div class="col-lg-12 voffset5">
-            <p class="tweet-content" linkify="twitter">{{t.text}}</p>
-        </div>
-        <div class="col-lg-4 vbottomoffset10">
-            <button type="button" class="btn btn-default btn-xs twitter-btn-action-retweet"
-                    ng-class="{'twitter-btn-action-retweeted':t.hasBeenRt}"
-                    ng-disabled="t.author.id == currentUser.id || t.hasBeenRt">
-                <span class="glyphicon glyphicon-retweet" aria-hidden="true"></span> {{t.nbRetweet}}
-            </button>
-            <button type="button" class="btn btn-default btn-xs twitter-btn-action-reply" ng-click="replyToTweet(t)">
-                <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>
-            </button>
-        </div>
-    </div>
-</div>
+<tweet-feed tweets="tweets"></tweet-feed>
