--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/navBar.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/views/navBar.html
@@ -47,7 +47,7 @@
                                        placeholder="Search something..."/>
 
                                 <div class="input-group-btn">
-                                    <button class="btn btn-default" type="submit" ng-disabled="!$parent.searchQuery || $parent.searchQuery.length == 0">
+                                    <button class="btn btn-primary" type="submit" ng-disabled="!$parent.searchQuery || $parent.searchQuery.length == 0">
                                         <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                                     </button>
                                 </div>
